--- a/Password Generator Codes/requirements.txt
+++ b/Password Generator Codes/requirements.txt
@@ -1,6 +1,23 @@
-
-customtkinter
-cryptography
-requests
-scapy
-python-nmap
+altgraph==0.17.4
+certifi==2024.12.14
+cffi==1.17.1
+charset-normalizer==3.4.0
+cryptography==44.0.0
+customtkinter==5.2.2
+darkdetect==0.8.0
+distlib==0.3.9
+filelock==3.16.1
+idna==3.10
+packaging==24.2
+pefile==2023.2.7
+platformdirs==4.3.6
+pycparser==2.22
+pyinstaller==6.11.1
+pyinstaller-hooks-contrib==2024.10
+python-nmap==0.7.1
+pywin32-ctypes==0.2.3
+requests==2.32.3
+scapy==2.6.1
+setuptools==75.6.0
+urllib3==2.2.3
+virtualenv==20.28.0
